[tool.poetry]
name = "dr_distortion_cues"
version = "0.1.0.dev1"
description = "Complete Code & Tutorial for the Paper: Enriching Dimensionality Reduction with Distortion Cues "
authors = ["Waqar Hassan <waqar_comsat@yahoo.com>"]
readme = "README.md"
packages = [{ include = "distortion_cues", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
numpy = "^2.0"
scikit-learn = "^1.5.2"
pyqt6 = "^6.7.1"
umap-learn = "^0.5.6"
seaborn = "^0.13.2"
plotly = "^5.24.1"
faiss-cpu = "^1.9.0.post1"
snc = "^0.2.1"
matplotlib = "^3.10.0"
scikit-image = "^0.25.2"
shapely = "^2.1.0"
asttokens = "^3.0.0"
colorspacious = "^1.1.2"
ipympl = "^0.9.7"
colorcet = "^3.1.0"
rtree = "^1.4.1"
triangle = "^20250106"
kaleido = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
